[package]
name = "nakatoshi"
version = "0.2.8"
authors = ["ndelvalle <nicolas.delvalle@gmail.com>"]
edition = "2018"
description = "Bitcoin vanity address generator"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ndelvalle/nakatoshi"
repository = "https://github.com/ndelvalle/nakatoshi"
keywords = ["bitcoin", "address", "vanity", "vanity-address"]
categories = ["command-line-utilities"]

[dependencies]
bitcoin = "0.29.2"
clap = "4.4.4"
time = "0.3.25"
rayon = "1.7.0"
getrandom = "0.2.10"
serde = "1.0.183"
serde_json = "1.0.104"
spinners = "4.1.0"
num_cpus = "1.16.0"
indicatif = "0.17.6"
